Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37619

The forced use of THD accessor functions hurts InnoDB performance

    XMLWordPrintable

Details

    • Not for ES Release Notes
    • Q4/2025 Server Maintenance

    Description

      The testing that was conducted in MDEV-37152 proves that making class THD opaque for InnoDB is costing a significant amount of performance. Applying this 10.11 based change would improve the throughput under one test setting by 1.25%. For another branch that includes further performance fixes, a performance gain of 2.43% was measured.

      Exposing the internals of THD to InnoDB would also allow add debug assertions to document and enforce some metadata locking rules; examples include MDEV-37365 and MDEV-35895.

      In the past, serg has been against exposing server internals to more storage engines. They are already being exposed to some storage engines.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Marko Mäkelä Marko Mäkelä
              Saahil Alam Saahil Alam
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.5h
                  4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.