storage/innobase/dict/dict0dict.cc
@@ -25,6 +25,7 @@ Data dictionary system
 Created 1/8/1996 Heikki Tuuri
 ***********************************************************************/
 
+#define MYSQL_SERVER
 #include <my_config.h>
 #include <string>
 
@@ -38,7 +39,6 @@ Created 1/8/1996 Heikki Tuuri
 #include <algorithm>
 #include "sql_class.h"
 #include "sql_table.h"
-#include <mysql/service_thd_mdl.h>
 
 #include "btr0btr.h"
 #include "btr0cur.h"
@@ -524,10 +524,8 @@ dict_index_get_nth_field_pos(
 
 void mdl_release(THD *thd, MDL_ticket *mdl) noexcept
 {
-  if (!thd || !mdl);
-  else if (MDL_context *mdl_context= static_cast<MDL_context*>
-           (thd_mdl_context(thd)))
-    mdl_context->release_lock(mdl);
+  if (thd && mdl)
+    thd->mdl_context.release_lock(mdl);
 }
 
 /** Parse the table file name into table name and database name.
@@ -787,7 +785,6 @@ dict_acquire_mdl_shared(dict_table_t *table,
   if (!table || !mdl)
     return table;
 
-  MDL_context *mdl_context= static_cast<MDL_context*>(thd_mdl_context(thd));
   size_t db_len;
 
   if (trylock)
@@ -805,9 +802,7 @@ dict_acquire_mdl_shared(dict_table_t *table,
   if (db_len == 0)
     return table; /* InnoDB system tables are not covered by MDL */
 
-  return mdl_context
-    ? dict_acquire_mdl_shared<trylock>(table, mdl_context, mdl, table_op)
-    : nullptr;
+  return dict_acquire_mdl_shared<trylock>(table, &thd->mdl_context, mdl, table_op);
 }
 
 template dict_table_t* dict_acquire_mdl_shared<false>
@@ -1100,9 +1095,7 @@ bool dict_stats::open(THD *thd) noexcept
   ut_ad(!index_stats);
   ut_ad(!mdl_context);
 
-  mdl_context= static_cast<MDL_context*>(thd_mdl_context(thd));
-  if (!mdl_context)
-    return true;
+  mdl_context= &thd->mdl_context;
   /* FIXME: use compatible type, and maybe remove this parameter altogether! */
   const double timeout= double(global_system_variables.lock_wait_timeout);
   MDL_request request;
@@ -3442,7 +3435,7 @@ dict_foreign_parse_drop_constraints(
 
 	ut_a(trx->mysql_thd);
 
-	cs = thd_charset(trx->mysql_thd);
+	cs = trx->mysql_thd->charset();
 
 	*n = 0;
 
